Add fixture venue admin command
